# JSON-updater

./: .gitignore  README.md  pyproject.toml  updater.py
json_updater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/json_updater/: __main__.py  cli.py
